Push latest changes from beacon-adapters-variants. Add api-key in request